--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 	<link rel='stylesheet' href='/build/bundle.css'>
 
 	<script defer src='/build/bundle.js'></script>
-	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Space Grotesk">
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@100;200;300;400;500;600;700;800&display=swap">
 
 </head>
 
